// Copyright 2019-present Facebook, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may
// not use this file except in compliance with the License. You may obtain
// a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations
// under the License.
//
// Run the following command to regenerate the src-gen java source code:
// $ ./third-party/java/protobuf/gen.sh

syntax = "proto3";

package facebook.remote_execution;

option java_multiple_files = true;
option java_outer_classname = "RemoteExecutionMetadataProto";
option java_package = "com.facebook.buck.remoteexecution.proto";

// Contains tracing information.
message TraceInfo {
  // ID for all the trace information corresponding to the current session.
  string trace_id = 1;

  // ID of an edge that needs to be closed (ie, added a end point).
  string edge_id = 2;
}

// RESessionID uniquely identifies a full remote execution session.
message RESessionID {
  string id = 1;
}

// Present if the execution was started by buck.
message BuckInfo {
  // The buck build id of the command starting the remote execution session.
  string build_id = 1;
}

// This is propagated in GRPC header "re-metadata-bin".
message RemoteExecutionMetadata {
  RESessionID re_session_id = 1;
  BuckInfo buck_info = 2;
  TraceInfo trace_info = 3;
}
